--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -55,6 +55,7 @@ a {
 header.project-header {
   font-size: 1rem;
   width: 100%;
+  text-align: center;
   margin-bottom: 3.125em;
   padding-top: 1em;
 }
