Changing how line animations happen.

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -191,6 +191,10 @@
 .guide-wrapper {
 }
 
+.vote-label {
+  font-size: 0.5em;
+}
+
 .annotation {
   font-family: Arial, sans-serif;
   font-size: 12px;
