--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -12,12 +12,12 @@
     <a href="#main-content" class="to-main-content sr-only">Skip to main content</a>
 
     <!-- Header -->
-    <header class="project-header" role="banner">
+    <header class="project-header" role="banner lg-container">
       @@include('./_header.ejs.html')
     </header>
 
     <!-- Main content here -->
-    <main id="main-content" class="content" role="main">
+    <main id="main-content" class="content lg-container" role="main">
 
       <div id="view1">
         <div class="chart-wrapper">
@@ -62,7 +62,7 @@
     </main>
 
     <!-- Footer -->
-    <footer role="contentinfo">
+    <footer role="contentinfo" class="lg-container">
       @@include('./_footer.ejs.html')
     </footer>
 
