--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -24,32 +24,32 @@
           <div class="chart">
             <div class="candidates cf">
               <div class="candidate candidate-0">
-                  <img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/frey.png"/>
+                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/frey.png"/></div>
                 <div class="candidate-name">Jacob Frey</div>
               </div>
 
               <div class="candidate candidate-1">
-                  <img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/hoch.png"/>
+                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/hoch.png"/></div>
                 <div class="candidate-name">Tom Hoch</div>
               </div>
 
               <div class="candidate candidate-2">
-                  <img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/hodges.png"/>
+                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/hodges.png"/></div>
                 <div class="candidate-name">Betsy Hodges</div>
               </div>
 
               <div class="candidate candidate-3">
-                  <img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/dehn.png"/>
+                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/dehn.png"/></div>
                 <div class="candidate-name">Raymond Dehn</div>
               </div>
 
               <div class="candidate candidate-4">
-                  <img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/levy.png"/>
+                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/levy.png"/></div>
                 <div class="candidate-name">Nekima Levy-Pound</div>
               </div>
 
               <div class="candidate candidate-5">
-                  <img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/other.png"/>
+                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/other.png"/></div>
                 <div class="candidate-name other">(Other)</div>
               </div>
             </div>
@@ -57,13 +57,13 @@
             <div class="target-0"></div>
           </div>
 
-          <div class="controls">
+          <div class="controls cf">
             <div class="btn-group">
-                <div class="btn btn-next no-select">Next</div>
-                <div class="btn btn-previous btn-inactive no-select">Previous</div>
+              <div class="btn btn-next no-select">Next</div>
+              <div class="btn btn-previous btn-inactive no-select">Previous</div>
             </div>
+
             <div class="explanation"></div>
-            <div class="clear"></div>
           </div>
         </div>
       </div>
