--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -24,32 +24,32 @@
           <div class="chart">
             <div class="candidates cf">
               <div class="candidate candidate-0">
-                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/frey.png"/></div>
+                <div class="candidate-image"><img src="http://static.startribune/assets/news/mayoralShakedown/frey.png"/></div>
                 <div class="candidate-name">Jacob Frey</div>
               </div>
 
               <div class="candidate candidate-1">
-                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/hoch.png"/></div>
+                <div class="candidate-image"><img src="http://static.startribune/assets/news/mayoralShakedown/hoch.png"/></div>
                 <div class="candidate-name">Tom Hoch</div>
               </div>
 
               <div class="candidate candidate-2">
-                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/hodges.png"/></div>
+                <div class="candidate-image"><img src="http://static.startribune/assets/news/mayoralShakedown/hodges.png"/></div>
                 <div class="candidate-name">Betsy Hodges</div>
               </div>
 
               <div class="candidate candidate-3">
-                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/dehn.png"/></div>
+                <div class="candidate-image"><img src="http://static.startribune/assets/news/mayoralShakedown/dehn.png"/></div>
                 <div class="candidate-name">Raymond Dehn</div>
               </div>
 
               <div class="candidate candidate-4">
-                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/levy.png"/></div>
+                <div class="candidate-image"><img src="http://static.startribune/assets/news/mayoralShakedown/levy.png"/></div>
                 <div class="candidate-name">Nekima Levy-Pound</div>
               </div>
 
               <div class="candidate candidate-5">
-                <div class="candidate-image"><img src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/other.png"/></div>
+                <div class="candidate-image"><img src="http://static.startribune/assets/news/mayoralShakedown/other.png"/></div>
                 <div class="candidate-name other">(Other)</div>
               </div>
             </div>
