--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,7 @@
 @import 'base/reset';
 @import 'base/helpers';
 @import 'base/base';
+@import 'base/strib-styles';
 @import 'base/site-view';
 
 // The project style is the main one to edit
