--- a/templates/_header.ejs.html
+++ b/templates/_header.ejs.html
@@ -1,2 +1,2 @@
-
-<h1><%= content.title %></h1>
+<h1 class="article-headline"><%= content.title %></h1>
+<p class="article-subhead">Sed porttitor lectus nibh. Pellentesque in ipsum id orci porta dapibus. Donec rutrum congue leo eget malesuada. Donec sollicitudin molestie malesuada.</p>
