--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -12,7 +12,7 @@
     <a href="#main-content" class="to-main-content sr-only">Skip to main content</a>
 
     <!-- Header -->
-    <header class="project-header" role="banner lg-container">
+    <header class="project-header lg-container" role="banner">
       @@include('./_header.ejs.html')
     </header>
 
