--- a/templates/_header.ejs.html
+++ b/templates/_header.ejs.html
@@ -1,2 +1,11 @@
 <h1 class="article-headline"><%= content.title %></h1>
-<p class="article-subhead">Sed porttitor lectus nibh. Pellentesque in ipsum id orci porta dapibus. Donec rutrum congue leo eget malesuada. Donec sollicitudin molestie malesuada.</p>
+<p class="article-subhead">In Minneapolis, the path to electoral victory is complex as five candidates jostled through multiple rounds of ranked-choice vote re-allocation before it was certain Jacob Frey had enough votes to win.</p>
+
+<div class="article-byline-mod">
+	<div class="article-byline">
+		<strong>By <a href="http://www.startribune.com/alan-palazzolo/440928273/">Alan Palazzolo</a> and Rahul Mukherjee</strong> Star Tribune
+	</div>
+	<div class="article-dateline">
+		November 10, 2017 — 12:00pm
+	</div>
+</div>
