Some various copy edits and suggestions.

--- a/templates/_footer.ejs.html
+++ b/templates/_footer.ejs.html
@@ -10,6 +10,5 @@
   Ronald Lischeid,
   David John Wilson,
   Troy Benjegerdes,
-  UWI,
   Ian Simpson, and
-  Christopher Zimmerman.</p>
+  write-ins.</p>
