--- a/templates/_header.ejs.html
+++ b/templates/_header.ejs.html
@@ -1,5 +1,5 @@
 <h1 class="article-headline"><%= content.title %></h1>
-<p class="article-subhead">In Minneapolis, the path to electoral victory is complex as five candidates jostled through multiple rounds of ranked-choice vote re-allocation before it was certain Jacob Frey had enough votes to win.</p>
+<p class="article-subhead">In Minneapolis, the path to electoral victory was complex as candidates jostled through multiple rounds of ranked-choice vote re-allocation before it was certain Jacob Frey had enough votes to win.</p>
 
 <div class="article-byline-mod">
 	<div class="article-byline">
