--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -50,7 +50,7 @@
 
               <div class="candidate candidate-5">
                 <div class="candidate-image"><img src="http://static.startribune.com/assets/news/mayoralShakedown/other.png"/></div>
-                <div class="candidate-name other">(Other)</div>
+                <div class="candidate-name other">Other candidates</div>
               </div>
             </div>
 
@@ -81,12 +81,12 @@
 
             <div class="candidate candidate-4">
               <div class="candidate-image"><img src="http://static.startribune.com/assets/news/mayoralShakedown/levy.png"/></div>
-              <div class="candidate-name">Nekima Levy-Pound</div>
+              <div class="candidate-name">Nekima Levy-Pounds</div>
             </div>
 
             <div class="candidate candidate-5">
               <div class="candidate-image"><img src="http://static.startribune.com/assets/news/mayoralShakedown/other.png"/></div>
-              <div class="candidate-name other">(Other)</div>
+              <div class="candidate-name other">Other candidates</div>
             </div>
           </div>
 
