Consistent text container.

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -280,7 +280,7 @@
 // Controls
 .controls {
   font-size: 0.85em;
-  max-width: 80%;
+  max-width: 660px;
   min-height: 100px;
   margin: 0 auto 1em;
   padding: 1em;
@@ -347,7 +347,7 @@ footer.lg-container {
   line-height: 1.25em;
 
   p {
-    width: 80%;
+    max-width: 660px;
     margin: 0 auto;
   }
 }
