--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -283,7 +283,7 @@
   max-width: 660px;
   min-height: 100px;
   margin: 0 auto 1em;
-  padding: 1em;
+  padding: 1em 0;
   border-top: 2px solid #dfdfdf;
   font-family: "Benton Sans", Georgia, serif;
 
