Added markup for mobile

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -351,3 +351,15 @@ footer.lg-container {
     margin: 0 auto;
   }
 }
+
+
+//Mobile
+
+iframe.mobileGraphic    {
+    margin: 0 auto;
+}
+
+h1.mobileSubhead    {
+    font-size: 1.25em;
+    margin: 0.13em 0;
+}
