--- a/templates/mobile.ejs.html
+++ b/templates/mobile.ejs.html
@@ -18,8 +18,37 @@
 
     <!-- Main content here -->
     <main id="main-content" class="content lg-container" role="main">
-
-      Graphic stuff here
+      <div>
+        <h1 class="mobileSubhead">The Candidates</h1>
+          <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/headerImg.html"/>
+     </div>
+      <div>
+          <h1 class="mobileSubhead">Round 1</h1>
+          <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round1.html"/>
+          <p></p>
+      </div>
+        
+      <div>
+          <h1 class="mobileSubhead">Round 2</h1>
+          <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round2.html"/>
+          <p></p>
+      </div>
+      <div>
+          <h1 class="mobileSubhead">Round 3</h1>
+          <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round3.html"/>
+          <p></p>
+      </div>
+      <div>
+          <h1 class="mobileSubhead">Round 4</h1>
+          <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round4.html"/>
+          <p></p>
+      </div>
+      <div>
+          <h1 class="mobileSubhead">Round 5</h1>
+          <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round5.html"/>
+          <p></p>
+      </div>        
+        
 
     </main>
 
