--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -92,7 +92,11 @@
 
           <div class="controls cf">
             <div class="btn-group">
-              <div class="btn btn-next no-select">Next</div>
+              <div class="btn btn-next no-select">
+                <i class="fa fa-chevron-circle-right"></i>
+                <span>Next</span>
+              </div>
+
               <div class="btn btn-previous btn-inactive no-select">Previous</div>
             </div>
 
