Minor fix in mobile.

--- a/templates/mobile.ejs.html
+++ b/templates/mobile.ejs.html
@@ -12,7 +12,7 @@
     <a href="#main-content" class="to-main-content sr-only">Skip to main content</a>
 
     <!-- Header -->
-    <header class="project-header" role="banner lg-container">
+    <header class="project-header lg-container" role="banner">
       @@include('./_header.ejs.html')
     </header>
 
@@ -27,7 +27,7 @@
           <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round1.html"/>
           <p></p>
       </div>
-        
+
       <div>
           <h1 class="mobileSubhead">Round 2</h1>
           <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round2.html"/>
@@ -47,8 +47,8 @@
           <h1 class="mobileSubhead">Round 5</h1>
           <iframe class="mobileGraphic" frameBorder="0" src="http://static.startribune.com.s3.amazonaws.com/assets/news/mayoralShakedown/mobileGraphics/round5.html"/>
           <p></p>
-      </div>        
-        
+      </div>
+
 
     </main>
 
