--- a/styles/base/_strib-styles.scss
+++ b/styles/base/_strib-styles.scss
@@ -36,10 +36,43 @@
 		margin-right: 1em;
     }
     .article-dateline{
-    color: #909090;
-    font-size: 10px;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;	
+	    color: #909090;
+	    font-size: 10px;
+	    font-weight: bold;
+	    letter-spacing: 0.5px;
+	    text-transform: uppercase;	
     }
 }
+
+@media screen and (max-width: 767px) /* Mobile */ {
+	body{
+		padding:0 10px;
+	}
+	.article-headline {
+	    font-size: 5em;
+	    line-height: 100%;
+	    margin-top: 0;
+	}
+	.article-subhead {
+	    margin: 0 auto;
+	    padding: 16px 0;
+	    font-size: 1.5em;
+	}
+	.article-byline-mod {
+	    font-size: 1em;
+	    line-height: 1.25em;
+	    strong{
+	    	display:block;
+	    }
+	    .article-byline{
+			border-right: none;
+			padding-right: 0;
+			margin-right: 0;
+    	}
+        .article-dateline{
+		    font-size: .9em;
+		    font-weight:normal;
+    	}
+	}
+}
+
