Mobile styling and direct embeds for mobile graphics

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -360,6 +360,188 @@ iframe.mobileGraphic    {
 }
 
 h1.mobileSubhead    {
-    font-size: 1.25em;
+    font-size: 1.5em;
     margin: 0.13em 0;
+    margin-top: 50px;
+    margin-bottom: 10px;
 }
+
+h3.chatterSubhead, p.chatter   {
+    font-size: 17px;
+    line-height: 1.5em;
+}
+
+// Graphics Artboards
+
+		.g-artboard {
+			margin:0 auto;
+		}
+
+
+			#g-round1-Artboard_1{
+				position:relative;
+				overflow:hidden;
+				width:287px;
+			}
+			.g-aiAbs{
+				position:absolute;
+			}
+			.g-aiImg{
+				display:block;
+				width:100% !important;
+			}
+			#g-round1-Artboard_1 p{
+				font-family:Benton Sans,arial,helvetica,sans-serif;
+				font-size:13px;
+				line-height:18px;
+				margin:0;
+			}
+			#g-round1-Artboard_1 .g-aiPstyle0 {
+				font-size:9px;
+				line-height:11px;
+                font-style: italic;
+				text-align:center;
+				color:#000000;
+			}
+			#g-round1-Artboard_1 .g-aiPstyle1 {
+				font-size:12px;
+				line-height:14px;
+				color:#ffffff;
+			}
+			#g-round1-Artboard_1 .g-aiPstyle2 {
+				font-size:12px;
+				line-height:14px;
+				color:#000000;
+			}
+			#g-round1-Artboard_1 .g-aiPstyle3 {
+				font-size:11px;
+				line-height:13px;
+				color:#000000;
+			}
+			#g-round1-Artboard_1 .g-aiPstyle4 {
+				font-size:9px;
+                font-style: italic;
+				line-height:11px;
+				color:#000000;
+			}
+			#g-round1-Artboard_1 .g-aiPstyle5 {
+				font-size:9px;
+				line-height:11px;
+                font-style: italic;
+				text-align:right;
+				color:#000000;
+			}
+			.g-aiPtransformed p { white-space: nowrap; }
+
+			#g-round2-Artboard_1{
+				position:relative;
+				overflow:hidden;
+				width:284px;
+			}
+			.g-aiAbs{
+				position:absolute;
+			}
+			.g-aiImg{
+				display:block;
+				width:100% !important;
+			}
+			#g-round2-Artboard_1 p{
+				font-family:Benton Sans,arial,helvetica,sans-serif;
+				font-size:13px;
+				line-height:18px;
+				margin:0;
+			}
+			#g-round2-Artboard_1 .g-aiPstyle0 {
+				font-size:12px;
+				line-height:14px;
+				color:#ffffff;
+			}
+			#g-round2-Artboard_1 .g-aiPstyle1 {
+				font-size:11px;
+				line-height:13px;
+				color:#000000;
+			}
+			.g-aiPtransformed p { white-space: nowrap; }
+			#g-round3-Artboard_1{
+				position:relative;
+				overflow:hidden;
+				width:284px;
+			}
+			.g-aiAbs{
+				position:absolute;
+			}
+			.g-aiImg{
+				display:block;
+				width:100% !important;
+			}
+			#g-round3-Artboard_1 p{
+				font-family:Benton Sans,arial,helvetica,sans-serif;
+				font-size:13px;
+				line-height:18px;
+				margin:0;
+			}
+			#g-round3-Artboard_1 .g-aiPstyle0 {
+				font-size:12px;
+				line-height:14px;
+				color:#ffffff;
+			}
+			#g-round3-Artboard_1 .g-aiPstyle1 {
+				font-size:11px;
+				line-height:13px;
+				color:#000000;
+			}
+			.g-aiPtransformed p { white-space: nowrap; }
+			#g-round4-Artboard_1{
+				position:relative;
+				overflow:hidden;
+				width:284px;
+			}
+			.g-aiAbs{
+				position:absolute;
+			}
+			.g-aiImg{
+				display:block;
+				width:100% !important;
+			}
+			#g-round4-Artboard_1 p{
+				font-family:Benton Sans,arial,helvetica,sans-serif;
+				font-size:13px;
+				line-height:18px;
+				margin:0;
+			}
+			#g-round4-Artboard_1 .g-aiPstyle0 {
+				font-size:12px;
+				line-height:14px;
+				color:#ffffff;
+			}
+			#g-round4-Artboard_1 .g-aiPstyle1 {
+				font-size:11px;
+				line-height:13px;
+				color:#000000;
+			}
+			.g-aiPtransformed p { white-space: nowrap; }
+			#g-round5-Artboard_1{
+				position:relative;
+				overflow:hidden;
+				width:283px;
+			}
+			.g-aiAbs{
+				position:absolute;
+			}
+			.g-aiImg{
+				display:block;
+				width:100% !important;
+			}
+			#g-round5-Artboard_1 p{
+				font-family:Benton Sans,arial,helvetica,sans-serif;
+				font-size:13px;
+				line-height:18px;
+				margin:0;
+			}
+			#g-round5-Artboard_1 .g-aiPstyle0 {
+				font-size:12px;
+				line-height:14px;
+				color:#ffffff;
+			}
+			.g-aiPtransformed p { white-space: nowrap; }
+
