--- a/templates/mobile.ejs.html
+++ b/templates/mobile.ejs.html
@@ -151,7 +151,7 @@
 	<!-- End ai2html - 2017-11-10 - 14:25 -->
 </div>
           <h3 class="chatterSubhead">Frey landed on top in the tally of first-choice votes.</h3>
-          <p class="chatter">The initial count of first choice votes put Frey in the lead but not hitting the necessary 50% + 1 vote mark to win, so we start counting. The first step of each round is to carry-over the votes from candidates that are still in the running. The 2nd and 3rd choice votes get redistributed from the 10+ candidates that did not make it past the first round as they could not mathematically get enough votes to win.</p>
+          <p class="chatter">The initial count of first choice votes put Frey in the lead but short of the majority needed to win, so we start counting. The second- and third-choice votes get redistributed from the 10+ candidates that did not make it past the first round as they could not mathematically get enough votes to win.</p>
       </div>
 
       <div>
@@ -200,7 +200,7 @@
 </div>
 
           <h3 class="chatterSubhead">Levy-Pounds is out, Dehn and Hodges pick up many of her votes.</h3>
-          <p class="chatter">With 5,454 votes going to Dehn, he comes out in 2nd after this redistribution, pushing down Hodges to 3rd and Hoch to 4th where he will be eliminated next.</p>
+          <p class="chatter">With 5,454 votes going to Dehn, he rises to second place after this redistribution, pushing down Hodges to third and Hoch to fourth where he will be eliminated next.</p>
       </div>
       <div>
           <h1 class="mobileSubhead">Round 3</h1>
@@ -238,8 +238,8 @@
 
 	<!-- End ai2html - 2017-11-10 - 15:01 -->
 </div>
-          <h3 class="chatterSubhead">Hoch falls off, giving leader Frey another big batch of votes.</h3>
-          <p class="chatter">Frey gets 9,888 votes, the majority of Hoch's non-exhausted votes. This gives Frey a solid lead and furthers Dehn's 2nd place standing.</p>
+          <h3 class="chatterSubhead">Hodges is eliminated.</h3>
+          <p class="chatter">Frey gets 9,888 votes, the majority of Hoch's non-exhausted votes. This gives Frey a solid lead and furthers Dehn's second-place standing.</p>
       </div>
       <div>
           <h1 class="mobileSubhead">Round 4</h1>
@@ -272,7 +272,7 @@
 	<!-- End ai2html - 2017-11-10 - 15:07 -->
 </div>
           <h3 class="chatterSubhead">Hoch falls off, giving leader Frey another big batch of votes.</h3>
-          <p class="chatter">Frey gets 9,888 votes, the majority of Hoch's non-exhausted votes. This gives Frey a solid lead and furthers Dehn's 2nd place standing.</p>
+          <p class="chatter">At this point, there is little chance that Dehn would have picked up enough votes to win, but the remaining votes from Hodges are split among the last two candidates.</p>
       </div>
       <div>
           <h1 class="mobileSubhead">Round 5</h1>
@@ -291,12 +291,9 @@
 			</div>
 		</div>
 	</div>
-
-
-	<!-- End ai2html - 2017-11-10 - 15:14 -->
 </div>
-          <h3 class="chatterSubhead">Hoch falls off, giving leader Frey another big batch of votes.</h3>
-          <p class="chatter">Frey gets 9,888 votes, the majority of Hoch's non-exhausted votes. This gives Frey a solid lead and furthers Dehn's 2nd place standing.</p>
+          <h3 class="chatterSubhead">Frey bests Dehn to win.</h3>
+          <p class="chatter">With only two candidates in the race, Frey comes out on top. </p>
       </div>        
         
 
