--- a/templates/mobile.ejs.html
+++ b/templates/mobile.ejs.html
@@ -258,9 +258,11 @@
         </div>
         <!-- End ai2html - 2017-11-10 - 15:07 -->
       </div>
-
-      <h3 class="chatterSubhead">Hodges is eliminated, Frey bests Dehn to win</h3>
+        <h3 class="chatterSubhead">Hodges is eliminated</h3>
       <p class="chatter">At this point, there is little chance that Dehn would have picked up enough votes to win, but the remaining votes from Hodges are split among the last two candidates. Frey comes out on top.</p>
+    </div>
+    <div>
+    <h1 class="mobileSubhead">Round 5</h1> 
 
       <div id='g-round5-box' class='ai2html'>
         <div id='g-round5-Artboard_1' class='g-artboard ' data-min-width='283'>
@@ -276,6 +278,8 @@
         </div>
         <!-- End ai2html - 2017-11-10 - 15:14 -->
       </div>
+        <h3 class="chatterSubhead">Frey bests Dehn to win</h3>
+        <p class="chatter">With only two candidates in the race, Frey comes out on top.</p>
     </div>
   </main>
 
