Adjusted margins on subheads

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -374,6 +374,10 @@ h3.chatterSubhead, p.chatter   {
     line-height: 1.5em;
 }
 
+h3.chatterSubhead {
+    margin-bottom: -15px;
+}
+
 // Graphics Artboards
 
 		.g-artboard {
