final tweaks black anchors and a new window link for those anchors.

--- a/templates/_header.ejs.html
+++ b/templates/_header.ejs.html
@@ -3,7 +3,7 @@
 
 <div class="article-byline-mod">
 	<div class="article-byline">
-		<strong>By <a href="http://www.startribune.com/alan-palazzolo/440928273/">Alan Palazzolo</a> and Rahul Mukherjee</strong> Star Tribune
+		<strong>By <a href="http://www.startribune.com/alan-palazzolo/440928273/" target="_new">Alan Palazzolo</a> and Rahul Mukherjee</strong> Star Tribune
 	</div>
 	<div class="article-dateline">
 		November 10, 2017 — 12:00pm
