--- a/templates/mobile.ejs.html
+++ b/templates/mobile.ejs.html
@@ -86,7 +86,7 @@
             <div id='g-ai0-5' class='g-Layer_1 g-aiAbs' style='top:48.1394%;left:92.273%;width:31.5111%;margin-left:-15.7556%;'>
               <p class='g-aiPstyle0'>Nekima</p>
               <p class='g-aiPstyle0'>Levy-</p>
-              <p class='g-aiPstyle0'>Pound</p>
+              <p class='g-aiPstyle0'>Pounds</p>
             </div>
           </div>
         </div>
@@ -262,7 +262,7 @@
       <p class="chatter">At this point, there is little chance that Dehn would have picked up enough votes to win, but the remaining votes from Hodges are split among the last two candidates. Frey comes out on top.</p>
     </div>
     <div>
-    <h1 class="mobileSubhead">Round 5</h1> 
+    <h1 class="mobileSubhead">Round 5</h1>
 
       <div id='g-round5-box' class='ai2html'>
         <div id='g-round5-Artboard_1' class='g-artboard ' data-min-width='283'>
