--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -45,7 +45,7 @@
 
               <div class="candidate candidate-4">
                 <div class="candidate-image"><img src="./assets/images/levy.png"/></div>
-                <div class="candidate-name">Nekima Levy-Pound</div>
+                <div class="candidate-name">Nekima Levy-Pounds</div>
               </div>
 
               <div class="candidate candidate-5">
